--- a/web/app/themes/blueprint/style.css
+++ b/web/app/themes/blueprint/style.css
@@ -1,11 +1,11 @@
 /*
 Theme Name:         Sage Starter Theme
-Theme URI:          https://roots.io/sage/
-Description:        Sage is a WordPress starter theme. <a href="https://github.com/roots/sage">Contribute on GitHub</a>
+Theme URI:          https://roots.io/blueprint/
+Description:        Sage is a WordPress starter theme. <a href="https://github.com/roots/blueprint">Contribute on GitHub</a>
 Version:            8.4.2
 Author:             Roots
 Author URI:         https://roots.io/
-Text Domain:        sage
+Text Domain:        blueprint
 
 License:            MIT License
 License URI:        http://opensource.org/licenses/MIT
