--- a/web/app/themes/blueprint/assets/styles/components/_comments.scss
+++ b/web/app/themes/blueprint/assets/styles/components/_comments.scss
@@ -4,6 +4,7 @@
 .comment-list ol {
   list-style: none;
 }
+/*
 .comment-form p {
   @extend .form-group;
 }
@@ -17,3 +18,4 @@
   @extend .btn;
   @extend .btn-primary;
 }
+*/
