--- a/web/app/themes/blueprint/assets/styles/main.scss
+++ b/web/app/themes/blueprint/assets/styles/main.scss
@@ -3,6 +3,8 @@
 // Automatically injected Bower dependencies via wiredep (never manually edit this block)
 // bower:scss
 @import "../../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+@import "../../bower_components/bootstrap-material-design/sass/bootstrap-material-design.scss";
+@import "../../bower_components/bootstrap-material-design/sass/ripples.scss";
 // endbower
 
 @import "common/global";
